# ember-backend

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: BACKEND_SPEC.md  DEVELOPMENT.md
scripts/: create_database.py
src/ember_backend/: auth.py  config.py  db.py  main.py  models.py  rate_limit.py  schemas.py  utils.py  webauthn_service.py
src/ember_backend/config/: database.py  settings.py
src/ember_backend/controller/: aasa_controller.py  auth_controller.py  dependencies.py  export_controller.py  password_auth_controller.py  token_auth_controller.py
src/ember_backend/dto/: api.py
src/ember_backend/exception/: api_error.py  handlers.py
src/ember_backend/model/: entities.py
src/ember_backend/repository/: auth_repository.py  export_repository.py
src/ember_backend/security/: password_service.py  refresh_token_service.py  token_service.py  webauthn_service.py
src/ember_backend/service/: auth_service.py  export_service.py
src/ember_backend/support/: rate_limit.py
tests/: conftest.py  helpers.py  test_auth.py  test_export.py  test_webauthn_service.py
